croatia-components-main@ce2ceb27993/n8n/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: n8n
  name: n8n
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
