croatia-components-main@ce2ceb27993/n8n/service-app-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-postgres
  namespace: n8n
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: app-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
