croatia-components-main@ce2ceb27993/n8n/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: n8n
  namespace: n8n
spec:
  host: n8n.apps.dev-nonpci-shared.npnbank.local
  to:
    kind: Service
    name: n8n
    weight: 100
  port:
    targetPort: 5678
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
